--- a/style.css
+++ b/style.css
@@ -40,33 +40,31 @@ span{
     opacity: 0.8;
 }
 #container{
-    width: 80%;
+    width: 85%;
     margin: auto;
     height: auto;
     background-color: white;
 }
 header{
     width: 100%;
-    height: 360px;
+    height: 350px;
     box-shadow: 0 2px 8px 2px rgba(20, 23 28 .15);
     border-bottom-left-radius:10px;
     border-bottom-right-radius: 10px;
     position: relative;
     font-family: 'Roboto', sans-serif;
     font: 35px;
-    margin-bottom: 5px;
+    margin-bottom:1px;
     background-color: black;
 
 
 
 }
 #header-pic img{
-    height: 360px;
+    height: 350px;
     width: 100%;
     border-bottom-left-radius:10px;
     border-bottom-right-radius: 10px;
-    padding: 3px;
-   
    
     
 }
@@ -86,7 +84,7 @@ section{
     border-bottom-left-radius:10px;
     border-bottom-right-radius: 10px;
     box-shadow: 0 2px 8px 2px rgba(20, 23 28 .15);
-    margin-top: 15pxs;
+    margin-top: 15px;
     overflow: auto;
 
 
@@ -150,7 +148,6 @@ main{
     transition: opacity 0.8s;
     background-color: rgb(11, 11, 11);
     color: rgb(11, 11, 11);
-    padding: 1px;
 }
 
 .index img:hover{
