--- a/style.css
+++ b/style.css
@@ -33,9 +33,11 @@ span{
 }
 
 #social i{
-    margin: right 15px;
+    margin:right 15px;
 }
-
+#social font{
+    margin-left: 40px;
+}
 #social i:hover{
     opacity: 0.8;
 }
