--- a/style.css
+++ b/style.css
@@ -268,10 +268,16 @@ h2{
     margin: 10px;
     transition: all 0.8s;
     object-fit: cover;
+    opacity: 0.7;
+    background-color: white;
+    filter: grayscale(0.7);
+
+    
 
 }
 .galpic:hover{
     opacity: 1;
+    filter: grayscale(0);
     border: 5px solid white;
     cursor: pointer;
 }
@@ -284,6 +290,7 @@ aside#sidebar{
     background: #e6e6e6;
     border: #cccccc solid 1px;
     margin-top: 10px;
+    padding: 5px;
 
 }
 
@@ -291,6 +298,7 @@ aside#sidebar .contact input, aside#sidebar .contact textarea{
     width: 30%;
     padding: 5px;
     float: top;
+    padding: 5px;
 }
 .form{
     width: 49%;
